<resources>
    <string name="app_name">ContactInfoRealm</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_email">Enter email</string>
    <string name="add_contact">Add Contact</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
</resources>
